fix for sign up overlap, increased breakpoint for tablet/mobile view, intermediate overlay view as it relies on hover

--- a/src/components/EventTypeCard/EventTypeCard.css
+++ b/src/components/EventTypeCard/EventTypeCard.css
@@ -3,6 +3,7 @@
     position: relative;
     width: 80%;
     max-width: 1200px;
+    
     height: 600px;
     border-radius: 5px;
     overflow: hidden;
@@ -76,7 +77,7 @@
     width: 68%;
     height: auto;
     font-family: var(--tertiary-font);
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.5;
     color: var(--primary-white);
     /* display: flex; */
@@ -131,10 +132,9 @@
 }
 
 
-
-
-@media (min-width: 769px) { .EventTypeCard__container:hover {
+@media (min-width: 990px) { .EventTypeCard__container:hover {
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(78, 0, 110, 1));
+    min-width: 900px;
 }}
 
 a:link, a:visited {
@@ -142,8 +142,15 @@ a:link, a:visited {
     text-decoration: none;
 }
 
-/* Mobile Styling */
-@media (max-width: 768px) {
+@media  (max-width:1280px ) {
+    .EventTypeCard:hover .EventTypeCard__title {
+        transform: translateY(-220px); /* Slide title up halfway */
+    }
+    
+    
+}
+/* Tablet/Mobile Styling */
+@media (max-width: 990px) {
     .EventTypeCard::before {
 
         background: none;
@@ -151,6 +158,7 @@ a:link, a:visited {
     }
     .EventTypeCard {
         width: 100%;
+        max-width: 650px;
         height: 525px;
         transition: none;
         background-size: 60%;
@@ -195,12 +203,12 @@ a:link, a:visited {
     .EventTypeCard__description {
         opacity: 1;
         position: relative;
-        top: 0px;
+  
         width: 90%;
         height: 75%;
         align-items: center;
         justify-content: center;
-        font-size: 16px;
+        font-size: 20px;
         padding: 0/ 10px;
         transition: none;
         white-space: normal;
@@ -229,7 +237,31 @@ a:link, a:visited {
      
 }
 
-/* Tablet Styling */
+/* for smaller phones*/
+@media (max-width: 460px) {
+    .EventTypeCard {
+        height: 600px;
+        width: 84vw;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+      
+    }
+    .EventTypeCard__description {
+        opacity: 1;
+        position: relative;
+  
+        width: 95%;
+        height: 80%;
+       
+        font-size: 20px;
+        padding: 0/ 10px;
+     
+  
+    }
+}
+
+/* Tablet Styling 
 @media (min-width: 769px) and (max-width: 1030px) {
 
 .EventTypeCard::before {
@@ -249,7 +281,7 @@ a:link, a:visited {
         background: rgba(184, 184, 184, 0.3);
         backdrop-filter: blur(10x);
         -webkit-backdrop-filter: blur(10px);
-        /* border: 1px solid rgba(255, 255, 255, 0.18); */
+        
     }
 
     .EventTypeCard__title-container {
@@ -271,7 +303,7 @@ a:link, a:visited {
     }
 
     .EventTypeCard:hover .EventTypeCard__title {
-        transform: translateY(0); /* Eliminate the slide */
+        transform: translateY(0); 
     }
    
     
@@ -285,7 +317,7 @@ a:link, a:visited {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 18px;
+        font-size: 20px;
         padding: 10px;
         transition: none;
     }
@@ -308,3 +340,4 @@ a:link, a:visited {
         transition: none;
     }
 }
+    */
